# Phredator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_samples.txt
phredator/: __init__.py
phredator/analyzer/: __init__.py  adaptive_thresholds.py  qc_analyzer.py
phredator/cli/: __init__.py  cli.py  commands.py
phredator/config/: default_config.yaml
phredator/config/experiment_types/: chipseq.yaml  metagenomics.yaml  rnaseq.yaml  wes.yaml  wgs.yaml
phredator/config/organisms/: arabidopsis.yaml  cat.yaml  celegans.yaml  chicken.yaml  chimpanzee.yaml  covid19.yaml  cow.yaml  dog.yaml  drosophila.yaml  ecoli.yaml  frog.yaml  human.yaml  maize.yaml  malaria.yaml  monkey.yaml  mosquito.yaml  mouse.yaml  pig.yaml  rat.yaml  rice.yaml  soybean.yaml  tomato.yaml  wheat.yaml  yeast.yaml  zebrafish.yaml
phredator/fixer/: __init__.py  qc_fixer.py
phredator/parser/: __init__.py  batch_parser.py  batch_processor.py  fastqc_parser.py  multiqc_parser.py
phredator/pipeline/: __init__.py  pipeline_runner.py
phredator/reporter/: __init__.py  report_generator.py
phredator/rules/: __init__.py  qc_rules.py
phredator/utils/: __init__.py  helpers.py  profile_loader.py  tool_checker.py
tests/: test_adaptive_thresholds.py  test_integration.py
tests/test_data/: dummy_fastqc_data.txt  fastqc_data.txt
